--- a/Thunderstore/thunderstore.toml
+++ b/Thunderstore/thunderstore.toml
@@ -10,7 +10,7 @@ websiteUrl = "https://github.com/FelixAllard/LunarAnomaliesLC"
 containsNsfwContent = false
 [package.dependencies]
 BepInEx-BepInExPack = "5.4.2100"
-Evaisa-LethalLib = "0.15.1"
+xilophor-StaticNetcodeLib = "1.1.0"
 
 [build]
 icon = "./icon.png"
@@ -33,4 +33,4 @@ target = "/"
 communities = [ "lethal-company", ]
 [publish.categories]
 # Get the list of categories from https://thunderstore.io/api/experimental/community/lethal-company/category/
-lethal-company = [ "bepinex", "clientside", "serverside", "monsters", "mods", ]
+lethal-company = [ "bepinex", "clientside", "serverside", "hazards", "mods", ]
